<resources>
    <string name="app_name">Task Manager</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Manage your tasks here !</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">My tasks</string>
    <string name="menu_slideshow">My histories</string>
    <string name="title_activity_menu">menuActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="confirm_delete_text">Are you sure you want to delete this task?</string>
    <string name="confirm_delete_title">Delete Task</string>
    <string name="delete">delete</string>
    <string name="cancel">Cancel</string>
    <string name="language">Change Language</string>
    <string name="theme_name">Light mode</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_language_summary">Select your preferred language</string>
    <string name="completed_checkbox">Completed</string>
    <string name="due_date_hint">Due date (dd/MM/yyyy)</string>
    <string name="updateprofile">  Update Profile! </string>
    <string name="sign">Sign Up</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forgetpassword">Forgot password</string>
    <string name="remember">Remember me</string>
    <string name="confirme_password">Confirme password</string>
    <string name="already_have_a_account">Already have a account</string>
    <string name="remember_me">remember me</string>
    <string name="sign_up">Sign Up</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="profile">Profil</string>
    <string name="sign_out">Sign out</string>
    <string name="update">update</string>
    <string name="share">share</string>
    <string name="share_text">Share task with your community !</string>
    <string name="share_with">Share with</string>
    <string name="welcome">Welcome to task manager !</string>
    <string name="description">Our app makes it easy to keep track of all your tasks and stay organized. With our intuitive user interface, you can quickly create new tasks, set due dates and reminders, and easily mark tasks as complete. Our app also features a powerful search function, making it easy to find the tasks you need when you need them. And with customizable tags and categories, you can easily group your tasks together in a way that makes sense for you. Whether you\'re managing a busy work schedule, keeping track of household chores, or simply trying to stay on top of your to-do list, our app has everything you need to stay organized and get things done.</string>
    <string-array name="languages">
        <item>English</item>
        <item>Français</item>
        <item>Deutsch</item>
        <!-- Add more languages as needed -->
    </string-array>

    <string-array name="language_codes">
        <item>en</item>
        <item>fr</item>
        <item>de</item>
        <!-- Add more language codes as needed -->
    </string-array>

</resources>