<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".loginActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLay_user"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:hint="@string/email"
                android:layout_marginTop="15dp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInput_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLay_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:endIconDrawable="@drawable/ic_lock"
                android:layout_marginTop="15dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLay_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_pass"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sh_remember"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:text="@string/remember_me"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_edittext"
                android:text="@string/login"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:cornerRadius = "20dp"
                android:layout_marginTop="15dp"

                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_forPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/forgetpassword"
                android:layout_marginTop="15dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtLay_pass"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_signup_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:text="@string/sign_up"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:transitionName="transition_login_btn"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>