<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".signupActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:id="@+id/txt_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Sign Up!"
                android:textColor="#3F51B5"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLay_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                app:endIconMode="clear_text"
                android:layout_marginTop="15dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInput_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLay_emailAdd"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                app:endIconMode="clear_text"
                android:layout_marginTop="15dp"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInput_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLay_pass_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:endIconDrawable="@drawable/ic_lock"
                android:layout_marginTop="15dp"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_pass"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLay_passConf_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirme_password"
                app:endIconMode="password_toggle"
                app:endIconDrawable="@drawable/ic_lock"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="15dp"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_passConf"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--switchCompact layout direction right is used for switching the text in right direction.-->
            <!--TextAllCaps is used for capitalization-->



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signup"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sign"
                android:textSize="16sp"
                android:layout_marginTop="15dp"

                android:textAllCaps="false"
                android:textStyle="bold"
                android:background="@drawable/custom_edittext"

                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:text="@string/already_have_a_account"
                android:textColor="@color/black"
                android:transitionName="transition_login_btn"
                app:cornerRadius="30dp"
                android:layout_marginTop="15dp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>